syntax = "proto3";
package com.example.echo;

option java_multiple_files = true;
option java_package = "com.example.echo.gen.proto";

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

service EchoService {
  rpc echo (EchoRequest) returns (EchoResponse);
}
